Fix bug where Container component would overlap Header/SearchForm components for smaller devices

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -2,8 +2,8 @@
   background: url('../../images/HomeBrew.jpg') no-repeat;
   background-size: cover;
   grid-area: header;
-  height: 30vh;
-  margin-bottom: 2%;
-  padding: 0% 1%;
-  width: 100%;
+  height: 33vh;
+  position: absolute;
+    left: 20%;
+  width: 80%;
 }
