--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -11,7 +11,7 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  // height: 100vh;
   justify-content: space-evenly;
 }
 
@@ -33,7 +33,7 @@
   align-items: space-between;
   display: flex;
   flex-direction: column;
-  height: 80vh;
+  // height: 80vh;
 }
 
 .Nav__ul--your-brewery {
