--- a/src/Containers/BeerCard/BeerCard.scss
+++ b/src/Containers/BeerCard/BeerCard.scss
@@ -1,6 +1,7 @@
 .BeerCard {
   justify-content: space-between;
   background-color: rgba(249, 225, 174, 0.8);
+  box-shadow: 2px 2px 6px grey;
   display: flex;
   flex-direction: column;
   height: 200px;
